@@ -3,32 +3,39 @@ package montithings.generator.helper;
 
 import arcbasis._ast.*;
 import arcbasis._symboltable.*;
+import cdlangextension._ast.ASTCDEImportStatement;
+import cdlangextension._symboltable.CDEImportStatementSymbol;
 import clockcontrol._ast.ASTCalculationInterval;
+import com.google.common.base.Preconditions;
 import com.google.common.collect.FluentIterable;
 import de.monticore.cd.cd4analysis._symboltable.CDTypeSymbol;
 import de.monticore.expressions.expressionsbasis._ast.ASTExpression;
 import de.monticore.expressions.expressionsbasis._ast.ASTNameExpression;
-import de.monticore.expressions.prettyprint.ExpressionsBasisPrettyPrinter;
-import de.monticore.prettyprint.IndentPrinter;
 import de.monticore.symboltable.ImportStatement;
 import de.monticore.types.check.SymTypeExpression;
-import de.monticore.types.prettyprint.MCFullGenericTypesPrettyPrinter;
 import de.monticore.types.typesymbols._symboltable.FieldSymbol;
+import de.monticore.types.typesymbols._symboltable.TypeSymbol;
 import de.monticore.types.typesymbols._symboltable.TypeVarSymbol;
 import de.se_rwth.commons.StringTransformations;
 import montiarc._ast.ASTArcSync;
 import montiarc._ast.ASTArcTiming;
 import montiarc._symboltable.MontiArcArtifactScope;
+import montiarc._symboltable.adapters.CDType2TypeAdapter;
 import montithings._ast.ASTBehavior;
+import montithings._ast.ASTMTCatch;
 import montithings._ast.ASTMTComponentType;
+import montithings._ast.ASTMTCondition;
+import montithings._visitor.MontiThingsPrettyPrinterDelegator;
 import montithings.generator.codegen.xtend.util.Utils;
+import montithings.generator.visitor.CppAssignmentPrettyPrinter;
+import montithings.generator.visitor.CppExpressionPrettyPrinter;
 import portextensions._ast.ASTAnnotatedPort;
 import portextensions._ast.ASTBufferedPort;
 import portextensions._ast.ASTSyncStatement;
 import prepostcondition._ast.ASTPostcondition;
 import prepostcondition._ast.ASTPrecondition;
+import prepostcondition._visitor.GuardExpressionVisitor;
 import prepostcondition.helper.ExpressionUtil;
-import prepostcondition.visitor.GuardExpressionVisitor;
 
 import java.io.File;
 import java.nio.file.Paths;
@@ -48,7 +55,7 @@ public class ComponentHelper {
   public ComponentHelper(ComponentTypeSymbol component) {
     this.component = component;
     if (component.isPresentAstNode()) {
-      componentNode = (ASTComponentType) component.getAstNode();
+      componentNode = component.getAstNode();
     }
     else {
       componentNode = null;
@@ -100,7 +107,7 @@ public class ComponentHelper {
    * Is empty if include is not needed.
    */
   public static Set<String> includeGenericComponent(ComponentTypeSymbol comp,
-      ComponentInstanceSymbol instance) {
+    ComponentInstanceSymbol instance) {
     /*
     final ComponentSymbolReference componentTypeReference = instance.getComponentType();
     if (componentTypeReference.hasActualTypeArguments()) {
@@ -113,14 +120,60 @@ public class ComponentHelper {
   }
 
   public static boolean portUsesCdType(PortSymbol portSymbol) {
-    // TODO: Write me
-    return false;
+    return portSymbol.getType().getTypeInfo() instanceof CDType2TypeAdapter;
   }
 
   public static String printCdPortPackageNamespace(ComponentTypeSymbol componentSymbol,
-      PortSymbol portSymbol) {
-    //TODO: Write me
-    return "";
+    PortSymbol portSymbol) {
+    if (!portUsesCdType(portSymbol)) {
+      throw new IllegalArgumentException(
+        "Can't print namespace of non-CD type " + portSymbol.getType().getTypeInfo().getFullName());
+    }
+    TypeSymbol cdTypeSymbol = portSymbol.getType().getTypeInfo();
+
+    Optional<ASTCDEImportStatement> cdeImportStatementOpt = getCppImportExtension(portSymbol);
+    if (cdeImportStatementOpt.isPresent()) {
+      String componentNamespace = printPackageNamespaceForComponent(componentSymbol);
+      return printPackageNamespaceFromString(
+        cdeImportStatementOpt.get().getImportClass().toString(), componentNamespace);
+    }
+    return printPackageNamespace(componentSymbol, cdTypeSymbol);
+  }
+
+  protected static String printPackageNamespaceFromString(String fullNamespaceSubcomponent,
+    String fullNamespaceEnclosingComponent) {
+    if (!fullNamespaceSubcomponent.equals(fullNamespaceEnclosingComponent) &&
+      fullNamespaceSubcomponent.startsWith(fullNamespaceEnclosingComponent)) {
+      return fullNamespaceSubcomponent.split(fullNamespaceEnclosingComponent)[1];
+    }
+    else {
+      return fullNamespaceSubcomponent;
+    }
+  }
+
+  /**
+   * Gets the c++ import statement for a given port type if available.
+   *
+   * @param portSymbol port using a class diagram type.
+   * @return c++ import statement of the port type if specified in the cd model. Otherwise empty.
+   */
+  public static Optional<ASTCDEImportStatement> getCppImportExtension(PortSymbol portSymbol) {
+    if (!portUsesCdType(portSymbol)) {
+      return Optional.empty();
+    }
+    //TODO
+    /*
+    TypeSymbol cdTypeSymbol = portSymbol.getType().getTypeInfo();
+    String CDEImportStatementSymbolId =
+      cdTypeSymbol.getPackageName() + "." + "Cpp" + "." + cdTypeSymbol.getName();
+    Optional<CDEImportStatementSymbol> cdeImportStatementSymbol = portSymbol.getEnclosingScope()
+      .resolve(CDEImportStatementSymbolId, CDEImportStatementSymbol);
+    if (cdeImportStatementSymbol.isPresent() && cdeImportStatementSymbol.get()
+      .getCDEImportStatementNode().isPresent()) {
+      return Optional.of(cdeImportStatementSymbol.get().getCDEImportStatementNode().get());
+    }
+     */
+    return Optional.empty();
   }
 
   /**
@@ -139,21 +192,20 @@ public class ComponentHelper {
    * takes in to account whether the port is inherited and possible required
    * renamings due to generic type parameters and their actual arguments.
    *
-   * @param ComponentTypeSymbol Symbol of the component which contains the port
-   * @param portSymbol          Symbol of the port for which the type name should be
-   *                            determined.
+   * @param comp       Symbol of the component which contains the port
+   * @param portSymbol Symbol of the port for which the type name should be
+   *                   determined.
    * @return The String representation of the type of the port.
    */
-  public static String getRealPortTypeString(ComponentTypeSymbol ComponentTypeSymbol,
-      PortSymbol portSymbol) {
-    return portSymbol.getType().toString();
+  public static String getRealPortTypeString(ComponentTypeSymbol comp, PortSymbol portSymbol) {
+    return portSymbol.getType().print();
   }
 
-  public static String printPackageNamespace(ComponentTypeSymbol comp, CDTypeSymbol cdtype) {
+  public static String printPackageNamespace(ComponentTypeSymbol comp, TypeSymbol cdtype) {
     String fullNamespaceSubcomponent = "montithings::" + cdtype.getFullName().replace(".", "::");
     String fullNamespaceEnclosingComponent = printPackageNamespaceForComponent(comp);
     if (!fullNamespaceSubcomponent.equals(fullNamespaceEnclosingComponent) &&
-        fullNamespaceSubcomponent.startsWith(fullNamespaceEnclosingComponent)) {
+      fullNamespaceSubcomponent.startsWith(fullNamespaceEnclosingComponent)) {
       return fullNamespaceSubcomponent.split(fullNamespaceEnclosingComponent)[1];
     }
     else {
@@ -235,7 +287,7 @@ public class ComponentHelper {
    */
   public Collection<String> getParamValues(ComponentInstanceSymbol param) {
     List<ASTExpression> configArguments = param.getArguments();
-    ExpressionsBasisPrettyPrinter printer = new ExpressionsBasisPrettyPrinter(new IndentPrinter());
+    MontiThingsPrettyPrinterDelegator printer = new MontiThingsPrettyPrinterDelegator();
 
     List<String> outputParameters = new ArrayList<>();
     for (ASTExpression configArgument : configArguments) {
@@ -286,7 +338,7 @@ public class ComponentHelper {
     final ComponentTypeSymbolLoader componentTypeReference = instance.getType();
 
     String packageName = Utils.printPackageWithoutKeyWordAndSemicolon(
-        componentTypeReference.getLoadedSymbol());
+      componentTypeReference.getLoadedSymbol());
     if (!packageName.equals("")) {
       result = packageName + ".";
     }
@@ -298,19 +350,19 @@ public class ComponentHelper {
   }
 
   public static String getSubComponentTypeNameWithoutPackage(ComponentInstanceSymbol instance,
-      HashMap<String, String> interfaceToImplementation) {
+    HashMap<String, String> interfaceToImplementation) {
     return getSubComponentTypeNameWithoutPackage(instance, interfaceToImplementation, true);
   }
 
   public static String getSubComponentTypeNameWithoutPackage(ComponentInstanceSymbol instance,
-      HashMap<String, String> interfaceToImplementation, boolean printTypeParameters) {
+    HashMap<String, String> interfaceToImplementation, boolean printTypeParameters) {
     String result = "";
     final ComponentTypeSymbolLoader componentTypeReference = instance.getType();
     result += componentTypeReference.getName();
     if (componentTypeReference.getLoadedSymbol().hasTypeParameter() && printTypeParameters) {
       // format simple component type name to full component type name
       List<TypeVarSymbol> types = new ArrayList<>(
-          componentTypeReference.getLoadedSymbol().getTypeParameters());
+        componentTypeReference.getLoadedSymbol().getTypeParameters());
       //TODO: we probably still need the following call?
       //types = addTypeParameterComponentPackage(instance, types);
       result += printTypeArguments(types);
@@ -320,7 +372,6 @@ public class ComponentHelper {
     }
     return result;
   }
-
 
   /**
    * Replace subcomponent instance type with generic if it is an interface type.
@@ -339,9 +390,9 @@ public class ComponentHelper {
    */
 
   public static String getSubComponentTypeNameWithBinding(ComponentTypeSymbol comp,
-      ComponentInstanceSymbol instance,
-      HashMap<String, String> interfaceToImplementation) {
-    return comp.getName();
+    ComponentInstanceSymbol instance,
+    HashMap<String, String> interfaceToImplementation) {
+    return instance.getType().getLoadedSymbol().getName();
     //TODO: Implement me
     /*
     HashMap<String, String> interfaceToImplementationGeneric = new HashMap<>(
@@ -376,20 +427,18 @@ public class ComponentHelper {
    * Determine whether the port of the given connector is an incoming or outgoing
    * port.
    *
-   * @param cmp      The component defining the connector
-   * @param isSource Specifies whether the port to check is the source port of the
-   *                 connector or the target port
+   * @param cmp        The component defining the connector
+   * @param portAccess the portaccess to evaluate
    * @return true, if the port is an incoming port. False, otherwise.
    */
-  public boolean isIncomingPort(ComponentTypeSymbol cmp, ASTPortAccess portAccess,
-      boolean isSource) {
+  public static boolean isIncomingPort(ComponentTypeSymbol cmp, ASTPortAccess portAccess) {
     Optional<PortSymbol> port;
     String portNameUnqualified = portAccess.getPort();
     // port is of subcomponent
     if (portAccess.isPresentComponent()) {
       String subCompName = portAccess.getComponent();
       Optional<ComponentInstanceSymbol> subCompInstance = cmp.getSpannedScope()
-          .resolveComponentInstance(subCompName);
+        .resolveComponentInstance(subCompName);
       ComponentTypeSymbol subComp = subCompInstance.get().getType().getLoadedSymbol();
       port = subComp.getSpannedScope().resolvePort(portNameUnqualified);
     }
@@ -423,12 +472,15 @@ public class ComponentHelper {
   }
 
   public String getRealPortCppTypeString(PortSymbol port) {
-    return java2cppTypeString(getRealPortTypeString(port));
-
+    return java2cppTypeString(getRealPortCppTypeString(this.component, port));
   }
 
   public static String getRealPortCppTypeString(ComponentTypeSymbol comp, PortSymbol port) {
-    return java2cppTypeString(getRealPortTypeString(comp, port));
+    if (ComponentHelper.portUsesCdType(port)) {
+      return printCdPortPackageNamespace(comp, port);
+    } else {
+      return java2cppTypeString(getRealPortTypeString(comp, port));
+    }
   }
 
   /**
@@ -437,8 +489,8 @@ public class ComponentHelper {
    */
   public static Boolean existsHWCClass(File hwcPath, String fqComponentName) {
     File ImplLocation = Paths.get(hwcPath.toString() + File.separator
-        + fqComponentName.replaceAll("\\.", Matcher.quoteReplacement(File.separator)) + ".h")
-        .toFile();
+      + fqComponentName.replaceAll("\\.", Matcher.quoteReplacement(File.separator)) + ".h")
+      .toFile();
     return ImplLocation.isFile();
   }
 
@@ -449,29 +501,29 @@ public class ComponentHelper {
    * @return Returns true if a handwritten implementation for the IPC Server exists
    */
   public static Boolean existsIPCServerHWCClass(File hwcPath, ComponentTypeSymbol comp,
-      String resourcePortName) {
+    String resourcePortName) {
     String fqCompName = comp.getPackageName() + "." + comp.getName();
     File implLocation = Paths.get(hwcPath.toString() + File.separator
-        + fqCompName.replaceAll("\\.", Matcher.quoteReplacement(File.separator))
-        + "-" + StringTransformations.capitalize(resourcePortName) + File.separator
-        + StringTransformations.capitalize(resourcePortName) + "Server.cpp").toFile();
+      + fqCompName.replaceAll("\\.", Matcher.quoteReplacement(File.separator))
+      + "-" + StringTransformations.capitalize(resourcePortName) + File.separator
+      + StringTransformations.capitalize(resourcePortName) + "Server.cpp").toFile();
     return implLocation.isFile();
   }
 
   protected static String getCalculationIntervalUnit(ComponentTypeSymbol comp) {
     return elementsOf(comp)
-        .filter(ASTCalculationInterval.class)
-        .first()
-        .transform(e -> e.getTimeUnit().toString())
-        .or("MSEC");
+      .filter(ASTCalculationInterval.class)
+      .first()
+      .transform(e -> e.getTimeUnit().toString())
+      .or("MSEC");
   }
 
   protected static int getCalculationInterval(ComponentTypeSymbol comp) {
     return elementsOf(comp)
-        .filter(ASTCalculationInterval.class)
-        .first()
-        .transform(e -> e.getInterval().getValue())
-        .or(50);
+      .filter(ASTCalculationInterval.class)
+      .first()
+      .transform(e -> e.getInterval().getValue())
+      .or(50);
   }
 
   /**
@@ -543,9 +595,9 @@ public class ComponentHelper {
    */
   public static List<List<String>> getSyncGroups(ComponentTypeSymbol comp) {
     return elementsOf(comp)
-        .filter(ASTSyncStatement.class)
-        .transform(ASTSyncStatement::getSyncedPortList)
-        .toList();
+      .filter(ASTSyncStatement.class)
+      .transform(ASTSyncStatement::getSyncedPortList)
+      .toList();
   }
 
   /**
@@ -556,11 +608,11 @@ public class ComponentHelper {
    */
   public static List<PortSymbol> getPortsNotInSyncGroup(ComponentTypeSymbol comp) {
     List<String> portsInSyncGroups = getSyncGroups(comp).stream()
-        .flatMap(Collection::stream)
-        .collect(Collectors.toList());
+      .flatMap(Collection::stream)
+      .collect(Collectors.toList());
     return comp.getAllIncomingPorts().stream()
-        .filter(p -> !portsInSyncGroups.contains(p.getName()))
-        .collect(Collectors.toList());
+      .filter(p -> !portsInSyncGroups.contains(p.getName()))
+      .collect(Collectors.toList());
   }
 
   /**
@@ -662,11 +714,23 @@ public class ComponentHelper {
   }
 
   public static List<ASTPrecondition> getPreconditions(ComponentTypeSymbol component) {
-    return elementsOf(component).filter(ASTPrecondition.class).toList();
+    List<ASTMTCondition> conditions = elementsOf(component).filter(ASTMTCondition.class).toList();
+    return conditions.stream()
+      .filter(c -> c.getCondition() instanceof ASTPrecondition)
+      .map(c -> (ASTPrecondition) c.getCondition())
+      .collect(Collectors.toList());
   }
 
   public static List<ASTPostcondition> getPostconditions(ComponentTypeSymbol component) {
-    return elementsOf(component).filter(ASTPostcondition.class).toList();
+    List<ASTMTCondition> conditions = elementsOf(component).filter(ASTMTCondition.class).toList();
+    return conditions.stream()
+      .filter(c -> c.getCondition() instanceof ASTPostcondition)
+      .map(c -> (ASTPostcondition) c.getCondition())
+      .collect(Collectors.toList());
+  }
+
+  public static List<ASTMTCatch> getCatchedConditions(ComponentTypeSymbol component) {
+    return elementsOf(component).filter(ASTMTCatch.class).toList();
   }
 
   public static List<ASTArcTiming> getTiming(ComponentTypeSymbol component) {
@@ -675,8 +739,8 @@ public class ComponentHelper {
 
   public static boolean isTimesync(ComponentTypeSymbol component) {
     return getTiming(component).stream()
-        .filter(e -> e.getArcTimeMode() instanceof ASTArcSync)
-        .collect(Collectors.toSet()).size() > 0;
+      .filter(e -> e.getArcTimeMode() instanceof ASTArcSync)
+      .collect(Collectors.toSet()).size() > 0;
   }
 
   public static boolean hasBehavior(ComponentTypeSymbol component) {
@@ -719,15 +783,37 @@ public class ComponentHelper {
   }
 
   /**
+   * Workaround for the fact that MontiArc returns parameters twice
+   */
+  public static Set<FieldSymbol> getFields(ComponentTypeSymbol component) {
+    return component.getFields().stream().collect(Collectors.toSet());
+  }
+
+  public static String printStatementBehavior(ComponentTypeSymbol component) {
+    List<ASTBehavior> behaviors = elementsOf(component).filter(ASTBehavior.class).toList();
+    Preconditions.checkArgument(!behaviors.isEmpty(),
+      "0xMT800 Trying to print behavior of component \"" + component.getName()
+        + "\" that has no behavior.");
+    Preconditions.checkArgument(behaviors.size() == 1,
+      "0xMT801 Trying to print behavior of component \"" + component.getName()
+        + "\" which has multiple conflicting behaviors.");
+
+    MontiThingsPrettyPrinterDelegator printer = new MontiThingsPrettyPrinterDelegator();
+    printer.setExpressionsBasisVisitor(new CppExpressionPrettyPrinter(printer.getPrinter()));
+    printer.setAssignmentExpressionsVisitor(new CppAssignmentPrettyPrinter(printer.getPrinter()));
+    return printer.prettyprint(behaviors.get(0).getMCJavaBlock());
+  }
+
+  /**
    * Returns all ports that appear in any batch statements
    *
    * @return unsorted list of all ports for which a batch statement exists
    */
   public static List<PortSymbol> getPortsInBatchStatement(ComponentTypeSymbol component) {
     List<ASTAnnotatedPort> bufferPorts = elementsOf(component)
-        .filter(ASTAnnotatedPort.class)
-        .filter(p -> p.getPortAnnotation() instanceof ASTBufferedPort)
-        .toList();
+      .filter(ASTAnnotatedPort.class)
+      .filter(p -> p.getPortAnnotation() instanceof ASTBufferedPort)
+      .toList();
     List<String> bufferPortsNames = new ArrayList<>();
     for (ASTAnnotatedPort port : bufferPorts) {
       for (ASTPortDeclaration decl : port.getPortDeclarationList()) {
